--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,3 @@
-p {
-	color: #f34;
-}
-
 .poster {
 	min-width: 50px;
 	min-height: 100px;
@@ -16,4 +12,12 @@ p {
 
 ul {
 	list-style: none;
+}
+
+.movie {
+	font: 24px arial, sans-serif;
+}
+
+.detail div {
+	font-size: 18px;
 }
